# baobab-cursor-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Makefile.ps1  README.md  conftest.py  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
docs/: 000_dev_diary.md  001_project_specifications.md  002_project_contraints.md
docs/.prompts/: 003_developper.md
docs/modules/: 001_gantt_modules.md  001_module_authentication.md  001_modules.json  002_module_configuration.md  003_module_logging.md  004_module_exceptions.md  005_module_validation.md  006_module_cursor_cli_wrapper.md  007_module_github_cli_wrapper.md  008_module_retry.md
docs/phases/: 001_foundation_setup.md  001_phase_fondations.md  002_core_models.md  002_gantt_phases.md  002_phase_modules_base.md  002_phases.json  003_infrastructure.md  003_phase_wrappers_cli.md  004_core_engine.md  004_phase_fonctionnalites_metier.md  005_cli_interface.md  005_phase_interface_dual.md  006_integration_testing.md  006_phase_tests_documentation.md  007_documentation.md  008_optimization_release.md
docs/phases/gantt/: gantt.json  gantt.mermaid
docs/specifications/: GANTT_USAGE.md  IMAGES_STATUS.md  README.md  git_hub_issue_template.txt  global_gantt.mermaid  issue-001-data-models-test-cursor-command-validation-empty-command.md  issue-001-data-models-test-cursor-config-validation-temperature-range.md  issue-001-data-models-test-cursor-response-multiple-failures.md  issue-001-data-models-test-session-multiple-failures.md  mermaid-config.json
docs/specifications/phase_001/: 001_project_structure.md  002_project_configuration.md  003_docker_setup.md
docs/specifications/phase_001/gantt/: gantt.json  gantt.mermaid
docs/specifications/phase_002/: 001_data_models.md  002_exceptions.md  003_utilities.md  004_persistence.md
docs/specifications/phase_002/gantt/: gantt.json  gantt.mermaid
docs/specifications/phase_003/: 002_container_pool.md  003_file_mounting.md  005_monitoring.md
docs/specifications/phase_003/gantt/: gantt.json  gantt.mermaid
docs/specifications/phase_004/: 001_command_executor.md  002_session_manager.md  003_cursor_client.md  004_async_client.md  005_retry_system.md  006_project_initializer.md
docs/specifications/phase_004/gantt/: gantt.json  gantt.mermaid
docs/specifications/phase_005/: 001_cli_interface.md  002_cli_commands.md  004_cli_testing.md
docs/specifications/phase_005/gantt/: gantt.json  gantt.mermaid
docs/specifications/phase_006/: 001_integration_tests.md  003_security_tests.md  004_compatibility_tests.md  005_test_automation.md
docs/specifications/phase_006/gantt/: gantt.json  gantt.mermaid
docs/specifications/phase_007/: 001_technical_docs.md  003_deployment_docs.md
docs/specifications/phase_007/gantt/: gantt.json  gantt.mermaid
docs/specifications/phase_008/: 002_release_preparation.md  003_monitoring_setup.md  004_maintenance.md
docs/specifications/phase_008/gantt/: gantt.json  gantt.mermaid
docs/spécifications/phase_001/: 003_docker_setup.md
docs/spécifications/phase_002/: 001_data_models.md
docs/spécifications/phase_003/: 001_docker_manager.md  004_logging_system.md
docs/spécifications/phase_005/: 003_ui_components.md
docs/spécifications/phase_006/: 002_performance_tests.md
docs/spécifications/phase_007/: 002_user_docs.md
docs/spécifications/phase_008/: 001_optimization.md
scripts/: build-docker.sh  generate_gantt_images.ps1  generate_gantt_images.sh  run-docker.sh  test-docker.sh  test_setup.py
src/baobab_cursor_cli/: __init__.py
src/baobab_cursor_cli/async/: __init__.py
src/baobab_cursor_cli/cli/: __init__.py
src/baobab_cursor_cli/config/: __init__.py
src/baobab_cursor_cli/core/: __init__.py
src/baobab_cursor_cli/exceptions/: __init__.py  cursor_exceptions.py  docker_exceptions.py  error_handler.py  exit_codes.py
src/baobab_cursor_cli/infrastructure/: __init__.py  exceptions.py
src/baobab_cursor_cli/infrastructure/docker/: __init__.py  container_runner.py  docker_manager.py  image_builder.py
src/baobab_cursor_cli/logging/: __init__.py
src/baobab_cursor_cli/models/: __init__.py  cursor_command.py  cursor_config.py  cursor_response.py  session.py
src/baobab_cursor_cli/persistence/: __init__.py
src/baobab_cursor_cli/retry/: __init__.py
src/baobab_cursor_cli/utils/: __init__.py  formatters.py  general.py  path_utils.py  validators.py
tests/baobab_cursor_cli/exceptions/: __init__.py  test_cursor_exceptions.py  test_docker_exceptions.py  test_error_handler.py  test_exit_codes.py
tests/baobab_cursor_cli/infrastructure/: __init__.py  test_exceptions.py
tests/baobab_cursor_cli/infrastructure/docker/: __init__.py  test_container_runner.py  test_docker_manager.py  test_image_builder.py
tests/baobab_cursor_cli/models/: __init__.py  test_cursor_command.py  test_cursor_config.py  test_cursor_response.py  test_session.py
tests/baobab_cursor_cli/utils/: __init__.py  test_formatters.py  test_general.py  test_path_utils.py  test_validators.py
