[metadata]
name = baobab-cursor-cli
version = 0.1.0
description = Bibliothèque Python pour l'intégration avec Cursor CLI via Docker
long_description = file: README.md
long_description_content_type = text/markdown
author = Baobab Team
author_email = contact@baobab.dev
url = https://github.com/baobabgit/baobab-cursor-cli
project_urls =
    Homepage = https://github.com/baobabgit/baobab-cursor-cli
    Documentation = https://baobab-cursor-cli.readthedocs.io/
    Repository = https://github.com/baobabgit/baobab-cursor-cli.git
    Issues = https://github.com/baobabgit/baobab-cursor-cli/issues
    Changelog = https://github.com/baobabgit/baobab-cursor-cli/blob/main/CHANGELOG.md
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords = cursor, cli, docker, python, async
python_requires = >=3.10

[options]
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
baobab_cursor_cli = py.typed, *.pyi

[options.entry_points]
console_scripts =
    baobab-cursor-cli = baobab_cursor_cli.cli.main:main

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    pytest-mock>=3.12.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.7.0
    pre-commit>=3.5.0
    isort>=5.12.0
    bandit>=1.7.0
    safety>=2.3.0
test =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    pytest-mock>=3.12.0
    pytest-xdist>=3.3.0
docs =
    sphinx>=7.1.0
    sphinx-rtd-theme>=1.3.0
    myst-parser>=2.0.0
    sphinx-autodoc-typehints>=1.24.0

[tool:pytest]
minversion = 7.0
addopts = 
    --strict-markers
    --strict-config
    --verbose
    --tb=short
    --cov=baobab_cursor_cli
    --cov-report=term-missing
    --cov-report=html:docs/coverage/html
    --cov-report=xml:docs/coverage/coverage.xml
    --cov-report=json:docs/coverage/coverage.json
    --cov-fail-under=80
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests
    docker: marks tests that require Docker
asyncio_mode = auto
filterwarnings =
    error
    ignore::UserWarning
    ignore::DeprecationWarning

[coverage:run]
source = baobab_cursor_cli
omit =
    */tests/*
    */test_*
    */__pycache__/*
    */migrations/*
    */venv/*
    */env/*
    */build/*
    */dist/*
    */site-packages/*
    */.*
    */conftest.py
    */setup.py
    */pyproject.toml
branch = True
parallel = True

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod

[coverage:html]
directory = docs/coverage/html

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    .env,
    docs/coverage,
    *.egg-info,
per-file-ignores =
    __init__.py:F401
    tests/*:S101

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True
show_error_codes = True

[[mypy.overrides]]
module = 
    docker.*,
    aiofiles.*,
    click.*,
    rich.*,
    sqlalchemy.*,
    aiosqlite.*,
    asyncio_mqtt.*,
    httpx.*,
    dotenv.*,
ignore_missing_imports = True

[bandit]
exclude_dirs = tests, docs
skips = B101, B601

[safety]
output = json
